--- a/content/config.json
+++ b/content/config.json
@@ -1,20 +1,20 @@
 {
-  "title": "CuratedStack (No-Code) Template",
-  "shortname": "CuratedStack",
-  "description": "Collection of free design tools and resources for makers, developers and designers",
-  "contact_link": "https://www.sandoche.com/?contact",
+  "title": "FreelanceHub by Anmol Ratan Sachdeva",
+  "shortname": "FreelanceHub",
+  "description": "Everything you need to become a better freelancer in 2020 and beyond. ",
+  "contact_link": "https://arsachdeva.com/contact",
   "google_analytics": "G-QWW9YH0WM9",
-  "hostname": "https://curatedstacktemplate.learn.uno/",
-  "icon": "/images/logos/icon.png",
+  "hostname": "arsachdeva.com",
+  "icon": "/images/logos/untitled-design-7-.png",
   "floatingPrompt": {
     "width": "500px",
     "left": "unset",
     "bottom": "112px",
-    "name": "CuratedStack Nocode Template",
-    "text": "Hi, do you like CuratedStack Nocode Template ? Don't forget to show your love on Product Hunt 🚀",
-    "url": "https://www.producthunt.com/posts/curatedstack-no-code-template",
+    "name": "If you like this, don't forget to Subscribe to FreelanceBytes",
+    "text": "Get more freelance wisdom in your inbox every week. ",
+    "url": "https://freelancebytes.xyz",
     "right": "32px",
     "disabled": false,
-    "buttonText": "CuratedStack Template on Product Hunt"
+    "buttonText": "Subscribe to FreelanceBytes Now"
   }
 }
